--- a/src/app/reg-dato-psicologo/reg-dato-psicologo.component.html
+++ b/src/app/reg-dato-psicologo/reg-dato-psicologo.component.html
@@ -14,7 +14,7 @@
       <header class="header-tittle">
         <h2>Registro Datos Especialista</h2>
       </header>
-      <mat-horizontal-stepper [linear]="!isLinear" #stepper>
+      <mat-horizontal-stepper  #stepper>
         <mat-step [stepControl]="registerform" step1>
           <ng-template matStepLabel>
             <label style="  font-size: 18px !important;
