--- a/src/app/snipper/spinner-blanc/spinner-blanc.component.html
+++ b/src/app/snipper/spinner-blanc/spinner-blanc.component.html
@@ -1,8 +1,11 @@
 
 
 <body class="opacity">
-<div class="loadingio-spinner-spin-0taxzvn7xmy"><div class="ldio-ycqeyt5v2o8">
-<div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div>
-</div></div>
-<h4>Cargando data....</h4>
+    <div class="loadingio-spinner-double-ring-qeo9lw9iujc"><div class="ldio-zzecixs5x7j">
+        <div></div>
+        <div></div>
+        <div><div></div></div>
+        <div><div></div></div>
+        </div></div>
+      <label  style="font-size: 18px;font-weight: bold;color: gray;">Cargando data...</label>
 </body>
