--- a/src/app/navbar/nav/nav.component.css
+++ b/src/app/navbar/nav/nav.component.css
@@ -1,127 +1,288 @@
-@import 'material-icons/iconfont/material-icons.css';
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-  }
 
-#user{
-    color: black;
-    margin-left: 15px;
-    text-transform: capitalize;
-    
-      margin-bottom: 7px;
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    font-weight: bold;
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* sidebar xdd*/
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+  box-sizing:border-box;
+  padding:0;
+  margin:0;
+  font-family: 'Poppins', sans-serif;
 }
-#img{
-    width: 40%;
-    height: 40%;
-}
-
 
 body{
     width: calc(100% - 70px);
-    overflow-x: hidden;
-    height: 91vh;
+    overflow-y: auto;
+    height: 100vh;
     margin-left: 70px;
+    min-height: 100vh;
+    background-image:url('https://www.wallpapertip.com/wmimgs/221-2219357_blue-gradient-wallpaper.jpg');
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+}
+.sidebar{
 
+  background:#00ccbe;
+  z-index: 100;
+  width:260px;
+  overflow:hidden;
+  min-height:100vh;
+  height:100vh;
+  position:fixed;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transition: width .3s;
+}
+.sidebar.cerrar{
+  width:75px;
+}
+.sidehead{
+  display:flex;
+  height:65px;
+  align-items:center;
+  padding:10px 15px;
+  position:relative;
+}
+.sidehead img{
+  height:45px;
+  border-radius: 50%;
+  margin-right:15px;
+}
+.sidehead h2{
+  color:white;
+  min-width: 200px;
+  font-size: 1.7rem;
+}
+.sidebar.cerrar .sidehead::after{
+  left: 0;
+  width:100%;
+}
+.sidehead::after{
+  position:absolute;
+  background-color:#dbe0e0;
+  content:'';
+  bottom:0;
+  width:80%;
+  height:1px;
+  left:25px
+  
+}
+.content{
+  width:100%;
+  position:relative;
+  height:75%;
+  
+  
 }
 
-
-
-
-
-.cont-menu-nav{
-    width: 100%;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-
-    background-color: white;
-    height: 90vh;
+.list-op{
+  width:100%;
+  height:100%;
+  padding:15px 15px;
+  list-style:none;
+  
 }
-
-
-.nava{
-   
-   
-    color: #01a89e ;
-    margin-top: 10px;
-    display: flex;
-    height: 50px;
-    font-weight: 600;
-    justify-content: space-between;
-    align-content: center;
-    width: 100%;
-    padding: 12px;
-    transition: 300ms ease;
-   
-
+.child-op{
+  color:white;
+  margin-bottom:8px;
+  height:40px;
+  font-weight:normal;
+  position: relative;
+  font-size:13px;
+  cursor: pointer;
+  min-width: 230px;
+  display:flex;
+  padding-left:15px;
+  border-radius:5px;
+  align-items:center;
+  
 }
-.nava span{
- font-size: 20px;
-
-}
-.nava:hover{
-    cursor: pointer;
-    background-color: #01a89e ;
-    border-radius: 10px;
+.child-op:hover{
+    min-width: auto;
     
-    color: white;
-   }
-.nava:hover a  mat-icon{
-    background-color: turquoise;
+  color:#f3fbfd;
+  background-color:  hsl(199deg 55% 52%);
 }
-.leftnav{
-    display: flex;
-    margin-right: 15px;
-    align-items: center;
+.child-op i{
+  width:55px;
+  min-width: 55px;
+}
+.sidebar.cerrar .content::after{
+  left: 0;
+  width:100%;
+}
+.content::after{
+  position:absolute;
+  background-color:  white;
+  content:'';
+  bottom:0;
+  width:80%;
+  height:1px;
+  left:25px
+  
 }
 
-.navdiv{
-    width:calc(100% - 70px);
-    margin-left: 70px;
-    height: 64px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: relative;
-    box-shadow :  0 1px 10px 0 rgb(182 183 195 / 50%) ;
-    background-color: white;
+.footer{
+  width:100%;
+  height:auto;
 }
-   .sidemenu{
-    background-color: #f2f2f7;
-    width: 270px;
-    height:100%;
-    position: fixed;
-    z-index: 999;
-   left: -200px;
-   transition: 0.3s;
-    box-shadow: 0 2px 10px 0 rgb(0 0 0 / 30%);
-   }
-   .header_side{
-       width: 100%;
-       height: 9%;
-       background-image: linear-gradient(to right, #136a8a, #267871);
-       display: flex;
-       justify-content: flex-end;
-       align-items: center;
-   }
-   .header_side label{
-       color: white;
-       font-weight: bold;
-       margin-left: 15px;
-       font-size: 18px;
-   }
+.footerlist{
+  width:100%;
+  height:auto;
+  padding:15px 20px;
+  list-style:none;
+}
+.footer-son{
+  
+ height:40px; 
+ display:flex;
+  
+   font-weight:bold;
+  
+  color:white;
+  font-size:13px;
+  margin-bottom:15px;
+  display:flex;
+  padding-left:10px;
+  border-radius:5px;
+  align-items:center;
+}
+.footer-son img{
+  height:40px;
+  border-radius:5px;
+  margin-left:-10px;
+  padding: 5px;
+  border: 2px solid white;
+  margin-right:25px;
+}
+.footer-son i{
+    width:55px;
+  min-width: 55px;
+}
 
-   .sidemenu:hover{
-        left: 0;
-   }
+.menu{
+    cursor: pointer;
+  
+  width:25px;
+  height:15px;
+ position:fixed;
+  transition: margin-left .3s,
+    transform .5s;
+  top:25px;
+  margin-left:100px;
+}
+.menu::before,.menu::after{
+  content:" ";
+  height:3px;
+  width:100%;
+  background:teal;
+  position:absolute;
+}
+.menu::after{
+  bottom:0;
+}
+.line{
+   height:3px;
+  width:100%;
+  background:teal;
+  position:absolute;
+  top:calc(50% - 1.5px)
+}
 
-   
+.menu.activo::after{
+  transform:translatey(-150%) rotate(-45deg);
+}
+
+.menu.activo::before{
+  transform:translatey(150%) rotate(45deg);
+}
+.menu.activo .line{
+  display:none;
+}
+
+.menu.activo{
+  margin-left:270px;
+  transform:rotate(1turn);
+}
+.bod{
+  background:red;
+  margin-left:75px;
+  width:calc(100vw - 75px);
+  height:100vh;
+  background-image:url('https://media.istockphoto.com/videos/abstract-background-video-id863512454?s=640x640');
+  background-repeat:no-repeat;
+  background-size:cover;
+  
+}
+
+.sidebar.cerrar .child-op:hover .tolpit{
+   transform:scale(1);
+}
+
+.tolpit{
+  position:fixed;
+  transform-origin: 0 50%;
+  background:  hsl(199deg 55% 52%);
+  transform:scale(0);
+  padding:10px 15px;  
+  margin-left:40px;
+  color:white;
+  border-radius:5px;
+  transition:transform .3s
+}
+.tolpit::before{
+  content:"";
+  position: absolute;
+  z-index:-1;
+  width:12px;
+  height:12px;
+  background-color:hsl(199deg 55% 52%);
+  left:-5px;
+  top:13px;
+  transform:rotate(45deg);
+}
+
+
+body::-webkit-scrollbar {
+  width: 15px;     
+      /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #f1f1f1;    /* color of the scroll thumb */
+  border-radius: 20px;      
+   /* roundness of the scroll thumb */
+  border: 3px solid white;  /* creates padding around scroll thumb */
+}
