--- a/src/app/pages/gest-op/gest-op.component.css
+++ b/src/app/pages/gest-op/gest-op.component.css
@@ -1,157 +1,164 @@
-@import 'material-icons/iconfont/material-icons.css';
-*{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 body{
-    width: 100%;
-    height: 100%;
-    padding: 40px;
-    background-color: #dedbe4;
-    
-}
-.header{
-    
-    margin: 0px auto 10px auto;
-    width: 30%;
-    color: #666;
-    display: flex;
-    
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    border-radius: 20px;
-    box-shadow:  0px 5px 5px 0px rgba(0,0,0,0.2);
-
-    height: 50px;
-  
-
+    padding: 80px;
+    font-family: 'Poppins', sans-serif;
+    background: transparent;
+    box-sizing: border-box;
 }
 h5{
-    margin: 0;
+    font-size: 22px;
+    color:teal;
+    margin-bottom: 50px;
 }
-.container2{
-    width: 100%;
-    height: 80%;
-    
+.nav-pills .nav-link.active{
+    color: teal;
+  
+    background-color: white;
+}
+.nav-pills .nav-link.active::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    width:3px;
+    height:100%;
+  background-color:teal;
+}
+.nav-pills .nav-link {
+    position: relative;
+    border-radius: 0.25rem;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background-color: #eee;
+    margin-top: 1px;
+}
+
+.formulario{
     display: flex;
     flex-direction: column;
-}
-.container{
-    border-radius: 20px;
-    width: 90%;
-    height: 75vh;
-    background-color: white;
-    padding: 10px;
-}
-.modal-content  {
-    -webkit-border-radius: 0px !important;
-    -moz-border-radius: 0px !important;
-    border-radius: 20px !important; 
-}
-.modal {
-    position: absolute;
-    border-radius: 50px;
-    top: 100px;
-    right: 100px;
-    bottom: 0;
-    left: 0;
-   
-    overflow-y: auto;
- }
-.cuerpo_gestion{
+    padding-left: 20px;
+  
     width: 100%;
-    height: 20vh;
-    background-color: white;
-   display: flex;
-    padding: 20px;
-    
-
+    padding-top: 50px;
+    height: 500px;
 }
-
+#add-btn{
+    width: 180px;
+  
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.btn-success{
+    color: #fff;
+    background-color: #26aa9f;
+    border-color:  #26aa9f;
+}
+.btn-success:focus{
+    color: #fff;
+    background-color: #1d8179;
+    border-color:  #1d8179;
+}
+.btn-success:hover{
+    color: #fff;
+    background-color: #1d8179;
+    border-color:  #1d8179;
+}
 .form{
     width: 100%;
-    display: flex;
-    justify-content: center;
-  
-       align-items: center;
-}
-.buttons{
-     width : 60%;
-    display: flex;
-    margin-left: 20px;
-    justify-content: flex-start;
-    align-items: center;
-    
-
+    display:flex;
+    margin-top: 25px;
+   margin-bottom: 25px;
+   flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 .form label{
-    margin-right: 30px;
+    margin-bottom: 5px;
+    color: grey;
+    margin-right: 55px;
+}
+.form-one{
+    width: 60%;
 }
 
-
-.buttons button{
-    margin-left: 20px;
+.col-9{
+    background: white;
     border-radius: 5px;
-    height: 50px;
-    border: none;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-
-.buttons .update{
-    margin-left: 20px;
-    border-radius: 10px;
-    color: white;
-    font-size: 15px;
-    padding: 8px 10px;
-    background-color: blue;
-    border: none;
-}
-.example-full-width{
-    margin-right: 8px;
-    width: 80%;
-}
-.modal-body{
-    padding: 30px;
-}
-
-#registerbtnrol{
-    background-color: seagreen;
-    height: 30px;
-    width: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 60px;
-    
-}
-
-
-
-.img-gestop{
+.form-two{
     width: 40%;
-    height: 100%;
+    padding-left: 45px;
+    display: flex;
+    flex-direction: column;
   
 }
-.img-gestop img{
-    width: 100%;
-    height: 100%;
+.form-two button{
+    margin-bottom: 10px;
+    margin-left: 10px;
+    width: 50px;
 }
-.cuerpo2{
+.form-two label{
+    margin-bottom: 5px;
+    width: auto;
+    margin-right: 0;
+}
+.tablaxd {
+    border-collapse: separate; 
+    font-size: 12.5px;
     width: 100%;
-    height: 50%;
-    padding: 10px;
-
+    border-spacing: 0px 15px; 
+   
+}
+.tablaxd td{
+    background: white;
+    overflow: hidden;
+  
+  
+}
+.tablaxd th{
+    background: transparent;
+    overflow: hidden;
+  
+  
+}
+.tablaxd thead{
+    background: transparent;
+    overflow: hidden;
+  
+  
 }
 
-.formulario1{
-    width: 100%;
-    height: 50%;
-    align-items: center;
-    display: flex;
-    padding: 20px;
-    margin: 0;
+.headtable th{
+    background: transparent;
+}
+.tablaxd .bodytable{
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
+    border-radius: 5px;
     
+    
+    height: 50px;
 }
+.headtable{
+    background: transparent;
+    box-shadow: 0;
+}
+.tablaxd td:nth-child(1){
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+.tablaxd td:nth-last-child(1){
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-left: 50px;
+}
+
+.tablaxd td:nth-last-child(2){
+
+    padding-left: 50px;
+}
+
+
